<resources>
    <string name="app_name">WhereAmI</string>
    <string name="hi">hello</string>
    <string name="addBtn">Add location</string>
    <string name="hello_blank_fragment">Welcome in Our application</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Write seconds</string>
    <string name="save_button_title">Save</string>
    <string name="clear_button_title">Clear</string>
    <string name="btn_home">Home</string>
    <string name="btn_map">Map</string>
    <string name="btn_list">List</string>
    <string name="btn_settings">Settings</string>
    <string name="settings_info">If you write 0, service will be disabled</string>
    <string name="settings_service_off">Location service disabled</string>
    <string name="settings_service_on">Location service enabled</string>
    <string name="location_added">Added location</string>
    <string name="location_service_saved">Location will be saved with period (in seconds): </string>
    <string name="location_service_saved_toast">Location saved</string>
    <string name="location_deleted">Deleted location</string>

</resources>
